main.tf
provider "aws" {
  region = "us-east-1"
  access_key = "" // put your aws access key 
  secret_key = ""  // put your aws secret key
}

// creating EC2 instance using teraform
resource "aws_instance" "test-ec2" {
  ami = "ami-0230bd60aa48260c6"
  instance_type = "t3.micro"
  tags = {
    # Name = "Test Instance"
  }
}

// Creating VPC (virtual Private Cloud) 
resource "aws_vpc" "my-first-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name="Production"
  }
}

// creating subnet for vpc
resource "aws_subnet" "subnet-1" {
  vpc_id = aws_vpc.my-first-vpc.id
  cidr_block = "10.0.1.0/24"
  tags = {
    Name="prod-subnet"
  }
}

# 1 Create VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name="Production"
  }
}

# 2 Create Internet Gateway
resource "aws_internet_gateway" "prod-gateway" {
 vpc_id =   aws_vpc.prod-vpc.id
}

# 3 Create Custom route table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id
  route {
    cidr_block="0.0.0.0/0"
    gateway_id= aws_internet_gateway.prod-gateway.id
  }
  route  {
    ipv6_cidr_block= "::/0"
    gateway_id=aws_internet_gateway.prod-gateway.id 
  }
  tags = {
    Name= "Prod"
  }
}

# 4 Create subnet 
resource "aws_subnet" "subnet-2" {
  vpc_id = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-easet-1a"
  tags = {
    Name="prod-subnet2"
  }
}

# 5 Associate subnet with Route Table
resource "aws_route_table_association" "prod-route-table-associate" {
  subnet_id = aws_subnet.subnet-2.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6 Create security group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name = "alloe_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id = aws_vpc.my-first-vpc.id
  ingress {
    description = "HTTPS from VPC"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
    description = "HTTP from VPC"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
    description = "SSH from VPC"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name="Allow-Web-traffic"
  }
}

# 7. Create Network Interface with ip in the subnet that was created in steps
resource "aws_network_interface" "web_server_pankaj" {
  subnet_id = aws_subnet.subnet-2.id
  private_ip = ["10.0.1.0/50"]
  security_groups = [aws_security_group.allow_web.id]
}
# 8. Assign Elastic Ip to network interface 

resource "aws_eip" "one" {
  vpc = true
  network_interface = aws_network_interface.web_server_pankaj.id
  associate_with_private_ip = "10.0.1.0/50"
  depends_on = [aws_internet_gateway.prod-gateway]
}

# 9. Create Ubuntu server and install / enable appache2
resource "aws_instance" "web-server-instance" {
  ami = ""
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "main-key"
  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web_server_pankaj.id
  }
  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install appache2 -y
              sudo systemctl start appache2
              sudo bash -c 'echo your first web server > /var/www/html/index.html'  
              EOF
  tags = {
    Name = "Web Server" 
  }            
}
